# ram

acoresrvs-pod-consul-sidekick-CORESRVS-842/: .envrc  .gitignore  .gitlab-ci.yml  project.nix  pyproject.toml
acoresrvs-pod-consul-sidekick-CORESRVS-842/pod_consul_sidekick/: accounts.py  azure_accounts.py  azure_library.py  config.py  crd_utils.py  crds.py  k8s.py  main.py  models.py  utils.py
